# osti

./: .gitignore  ARCHITECTURE.html  CHANGELOG.md  CLAUDE.md  README.md  architecture.dsl  architecture.html  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
examples/: nielsen.json
scripts/: generate.py
src/osti/: __init__.py  extensions.py  session_plan.py
tests/: test_examples.py  test_extensions.py  test_models.py
